test_suite/alan-2022-examples/failing/000150_mutation.alan
source) I8 begin relax end
